--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <option value="" selected disabled>Выбрать</option>
                     <option value="road">Дорога</option>
                     <option value="forest">Лес</option>
-                    <option value="neighbor" selected>Соседний участок</option>
+                    <option value="neighbor">Соседний участок</option>
                     <option value="ditch">Канава</option>
                 </select>
             </div>
@@ -41,7 +41,7 @@
                     <option value="" selected disabled>Выбрать</option>
                     <option value="road">Дорога</option>
                     <option value="forest">Лес</option>
-                    <option value="neighbor" selected>Соседний участок</option>
+                    <option value="neighbor">Соседний участок</option>
                     <option value="ditch">Канава</option>
                 </select>
             </div>
@@ -52,7 +52,7 @@
                     <option value="" selected disabled>Выбрать</option>
                     <option value="road">Дорога</option>
                     <option value="forest">Лес</option>
-                    <option value="neighbor" selected>Соседний участок</option>
+                    <option value="neighbor">Соседний участок</option>
                     <option value="ditch">Канава</option>
                 </select>
             </div>
@@ -62,7 +62,7 @@
                     <option value="" selected disabled>Выбрать</option>
                     <option value="road">Дорога</option>
                     <option value="forest">Лес</option>
-                    <option value="neighbor" selected>Соседний участок</option>
+                    <option value="neighbor">Соседний участок</option>
                     <option value="ditch">Канава</option>
                 </select>
             </div>
